should check if token there is but not working fully

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -17,9 +17,13 @@ security:
     dev:
       pattern: ^/(_(profiler|wdt)|css|images|js)/
       security: false
-    main:
-      lazy: true
-      provider: app_user_provider
+    api:
+      pattern: ^/api
+      stateless: true
+      #provider: entity_provider
+      guard:
+        authenticators:
+          - lexik_jwt_authentication.jwt_token_authenticator
 
     # activate different ways to authenticate
     # https://symfony.com/doc/current/security.html#the-firewall
@@ -29,9 +33,10 @@ security:
 
   # Easy way to control access for large sections of your site
   # Note: Only the *first* access control that matches will be used
+
   access_control:
-    # - { path: ^/admin, roles: ROLE_ADMIN }
-    # - { path: ^/profile, roles: ROLE_USER }
+    - { path: ^/api/doc, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+    - { path: ^/api, roles: IS_AUTHENTICATED_FULLY }
 
 when@test:
   security:
