--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "jms/serializer-bundle": "^4.0",
         "lexik/jwt-authentication-bundle": "^2.15",
         "nelmio/cors-bundle": "^2.2",
+        "pagerfanta/pagerfanta": "^3.6",
         "phpdocumentor/reflection-docblock": "^5.3",
         "phpstan/phpdoc-parser": "^1.2",
         "stof/doctrine-extensions-bundle": "^1.7",
