--- a/composer.json
+++ b/composer.json
@@ -11,13 +11,14 @@
         "doctrine/annotations": "^1.0",
         "doctrine/doctrine-bundle": "^2.5",
         "doctrine/doctrine-migrations-bundle": "^3.2",
-        "doctrine/orm": "^2.10",
+        "doctrine/orm": "^2.11",
         "firebase/php-jwt": "^6.1",
         "friendsofsymfony/rest-bundle": "^3.3",
         "jms/serializer-bundle": "^4.0",
+        "knplabs/knp-paginator-bundle": "^5.8",
         "lexik/jwt-authentication-bundle": "^2.15",
         "nelmio/cors-bundle": "^2.2",
-        "pagerfanta/pagerfanta": "^3.6",
+        "pagerfanta/doctrine-orm-adapter": "^3.6",
         "phpdocumentor/reflection-docblock": "^5.3",
         "phpstan/phpdoc-parser": "^1.2",
         "stof/doctrine-extensions-bundle": "^1.7",
